src/test/deca/context/valid/declare-boolean.deca
// Description:
//    Declare un boolean 
//
// Resultats:
//    //
//
// Historique:
//    cree le 06/01/2023

{
    boolean i = true;
}